--- a/src/main/resources/templates/report/listReports.html
+++ b/src/main/resources/templates/report/listReports.html
@@ -11,28 +11,27 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layo
   </head>
 
   <body class="text-center" data-new-gr-c-s-check-loaded="14.1067.0" data-gr-ext-installed="">
-    <div  style="justify-content: center; align-items: center;" class="container text-center" layout:fragment="main-content">
-        <div  style="justify-content: center; align-items: center; margin: 0; padding: 0;">
-
-              <div  style="width: 925px;" class="input-group">
-                   <input type="search" class="form-control rounded" placeholder="Patient name or dd/yy/yyyy" aria-label="" aria-describedby="search-addon" />
-                <button type="button" class="btn btn-outline-primary">search</button>
+        <div  class="container text-center" style="justify-content: center; align-items: center;" layout:fragment="main-content">
+            <form method="get" th:action="'/reportSearch?' + ${keyword}">
+              <div style="margin-left: 40px;" class="input-group col-md-10">
+                   <input type="search" class="form-control  rounded" id="keyword" name="keyword" placeholder="Patient name or dd/yy/yyyy" aria-label="" aria-describedby="search-addon" />
+                <button type="submit" class="btn btn-info btn-download">Search</button>
               </div>
-            <div class="row">
+            </form>
                 <div class="post-list" th:each="p :${reports}">
-                    <div class="row" >
-                        <div class="col-sm-2">
+                    <div style="margin-left:0px; margin-right: 0px;" class="row" >
+                        <div class="col-sm-2 table-bordered">
                             <div class="picture">
                                 <img alt="Opt wizard thumbnail" src="../static/img/person-icon.png" th:src="@{img/person-icon.png}">
                             </div>
                         </div>
-                        <div class="col-sm-2 d-flex justify-content-center align-items-center">
+                        <div class="col-sm-2 d-flex justify-content-center align-items-center table-bordered">
                             <div>
                                 <p th:text="${p.id}">Report Id</p>
 
                             </div>
                         </div>
-                        <div class="col-sm-6">
+                        <div class="col-sm-6 table-bordered">
                             <h4>
                                 <a hre="#" class="username" th:text="${p.patientName}">Deyson Bejarano</a>
                             </h4>
@@ -44,17 +43,17 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layo
                             <p class="description" th:text="${p.diseaseDefinition}">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In velit lectus, efficitur eu eros vel, luctus aliquet est. Sed sit amet ligula non mauris porta dignissim..</p>    
                         </div>
                         </div>
-                        <div class="col-sm-2" data-no-turbolink="">
+                        <div class="col-sm-2" >
                             <a class="btn btn-info btn-download btn-round pull-right makeLoading" th:href="'/report/'+ ${p.id}">
                             <i class="fa fa-share"></i> View
                             </a>            
                         </div>
                     </div>
                 </div>
-            </div>
+            
         
     </div>
+    
 
 </body>
-<grammarly-desktop-integration data-grammarly-shadow-root="true"></grammarly-desktop-integration>
 </html>
