--- a/src/main/resources/templates/report/reportDesign.html
+++ b/src/main/resources/templates/report/reportDesign.html
@@ -10,7 +10,7 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layo
     
     <link href="../static/css/listReport.css" th:href="@{css/listReport.css}" rel="stylesheet">
 
-    <title>Account details</title>
+    <title>Report details</title>
   </head>
 
   <body class="text-center" data-new-gr-c-s-check-loaded="14.1067.0" data-gr-ext-installed="">
