added user roles -admin -user -guest

--- a/src/main/resources/templates/layout_page/footer.html
+++ b/src/main/resources/templates/layout_page/footer.html
@@ -10,10 +10,7 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
  
   <body>
     
-    <footer th:fragment="footer" style="position: relative;bottom: 0px;width: 100%;margin-bottom: 0px;"><p class="text-muted">© 2022
-      Logged user: <span sec:authentication="name">Bob</span>
-
-    </p>
+    <footer th:fragment="footer" style="position: relative;bottom: 0px;width: 100%;margin-bottom: 0px;"><p class="text-muted">© 2022</p>
     </footer>  
 
     
