--- a/src/main/resources/templates/layout_page/header.html
+++ b/src/main/resources/templates/layout_page/header.html
@@ -19,7 +19,7 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 
                   </li>
                 <li class="nav-item active">
-                  <a class="nav-link" href="/">Reports <span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="/reports">Reports <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="/reportCreate">Create report</a>
