--- a/src/main/resources/templates/report/listReports.html
+++ b/src/main/resources/templates/report/listReports.html
@@ -7,7 +7,7 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layo
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <link href="../static/css/listReport.css" th:href="@{css/listReport.css}" rel="stylesheet">
 
-    <title>Account details</title>
+    <title>Reports</title>
   </head>
 
   <body class="text-center" data-new-gr-c-s-check-loaded="14.1067.0" data-gr-ext-installed="">
