--- a/src/main/resources/templates/report/reportDesign.html
+++ b/src/main/resources/templates/report/reportDesign.html
@@ -9,12 +9,15 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layo
     
     
     <link href="../static/css/listReport.css" th:href="@{css/listReport.css}" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.4/jspdf.debug.js" ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.4/jspdf.min.js" ></script>
 
     <title>Report details</title>
   </head>
 
   <body class="text-center" data-new-gr-c-s-check-loaded="14.1067.0" data-gr-ext-installed="">
-    <div style="justify-content: center; align-items: center;" class="container text-center" layout:fragment="main-content" th:object="${report}">
+    <div  style="justify-content: center; align-items: center;" class="container text-center" layout:fragment="main-content" th:object="${report}">
+      <div id="whatToPrint">
       <h1 class="h3 mb-3 font-weight-normal">Report Details</h1>
       <table class="table table-bordered " >
         <thead>
@@ -49,16 +52,18 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layo
         <div class="col-8 table-bordered h-100 d-inline-block d-flex justify-content-md-center align-items-center" th:text="*{user.name}">laborant name username</div>
         
       </div>
+      </div>
       <div  class="d-flex justify-content-md-center align-items-center vh-100" style="height:50px;margin-top: 40px;">
         <div class="col-4  h-100 d-inline-block d-flex justify-content-md-center align-items-center"><a th:href="'/reportEdit/'+*{id}" role="button" class="btn btn-lg btn-primary btn-block" type="button">Edit</a></div>
         <div class="col-8  h-100 ">
         <form class="mb-3" th:method="post" th:action="@{'/reportDelete/'+*{id}}" >
-        <button class="btn btn-lg btn-primary btn-danger btn-block" type="submit"><a role="submit"  onclick="return confirm('Are you sure you want to delete the report?');"  type="submit">Delete</a></button>
+        <button class="btn btn-lg btn-primary btn-danger btn-block" type="submit"><a role="submit" type="submit">Delete</a></button>
       </form>
     </div>
       </div>
       
-      
+      <div style="margin-top:10px ;" class="col-12  h-100 d-inline-block d-flex justify-content-md-center align-items-center"><a role="button" type="button" class="btn btn-lg btn-primary btn-block" href="javascript:generatePDF()" id="downloadButton">Click to download report as pdf</a></div>
+
     </div>
 </body>
 </html>
@@ -66,4 +71,26 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layo
               
 
 </body>
+<script>
+  async function generatePDF() {
+      document.getElementById("downloadButton").innerHTML = "Currently downloading, please wait";
+
+      var downloading = document.getElementById("whatToPrint");
+      var doc = new jsPDF('l', 'pt','a4');
+
+      await html2canvas(downloading, {
+          width: 1110
+      }).then((canvas) => {
+          doc.addImage(canvas.toDataURL("image/png"), 'PNG', 5, 5, 800, 550);
+      })
+
+      doc.save("Document.pdf");
+
+
+      document.getElementById("downloadButton").innerHTML = "Click to download report as pdf";
+  }
+
+  
+
+</script>
 </html>
