--- a/src/main/resources/templates/user/signIn.html
+++ b/src/main/resources/templates/user/signIn.html
@@ -14,6 +14,8 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"  xmlns:sf="http://www.w
       <img class="mb-4" src="../static/img/logo.png" th:src="@{img/logo.png}" alt="" width="72" height="72">
       <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
       <label for="inputUsername" class="sr-only">Username</label>
+      <p th:text="${param.error}">Wrong! you can't authorize.</p>
+
       <input type="text" id="inputUsername"  th:field="*{userName}" name="userName" class="form-control" placeholder="Username" required="" autofocus="">
       <p th:if="${#fields.hasErrors('userName')}" th:errors="*{userName}">Incorrect username</p>
       
